--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,16 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+app_cart_order:
+    path: /cart/order
+    controller: App\Controller\CartController::order
+
+app_cart_total:
+    path: /cart/total
+    controller: App\Controller\CartController::total
+
+
+# redirecting to the cart
+homepage:
+    path: /
+    controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController::urlRedirectAction
+    defaults:
+        path: /cart/order
+        permanent: true
